examples/test/testpolicy54.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy54
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key23: value39
      key41: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value2
      podSelector:
        matchLabels:
          key22: value35
          key35: value0
          key25: value22
